# stockfishGUI

./: .gitignore  README.txt  index.html
assets/css/: style.css
assets/js/: app.js  engine-controller.js
desktop/: Cargo.toml
desktop/src/: lib.rs  main.rs
tools/: package_win64.py
